@@ -10,13 +10,14 @@ import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 /**
@@ -55,15 +56,20 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 jwtClaims.sessionId(),
                 jwtClaims.email(),
                 jwtClaims.name(),
+                jwtClaims.zimbraId(),
+                jwtClaims.primeiroAcesso(),
                 jwtClaims.federationId(),
                 jwtClaims.singularId(),
                 jwtClaims.areaId(),
                 jwtClaims.teamId());
 
+        String authority = jwtClaims.primeiroAcesso()
+                ? SecurityConstants.AUTHORITY_PRIMEIRO_ACESSO
+                : SecurityConstants.AUTHORITY_OPERATIONAL;
         UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
                 principal,
                 null,
-                Collections.emptyList());
+                List.of(new SimpleGrantedAuthority(authority)));
         authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
         SecurityContextHolder.getContext().setAuthentication(authentication);
     }
